test_programs/compile_failure/noirc_frontend_tests_mutable_self_call/src/main.nr

    fn main() {
        let mut bar = Bar {};
        let _ = bar.bar();
    }

    struct Bar {}

    impl Bar {
        fn bar(&mut self) {
            let _ = self;
        }
    }
    